fixed navbar + fixed word wrap text + logo without background

--- a/src/App.css
+++ b/src/App.css
@@ -119,12 +119,11 @@ html, body {
   -moz-text-fill-color: transparent;
 }
 h1, p {
-  width: 70vw;
-  word-wrap: break-word;
+  max-width: 90%;
 }
 h1 {
   margin: 0;
-  font-size: 3em;
+  font-size: 3.1em;
   margin-bottom: 3vh;
 }
 p {
@@ -261,6 +260,7 @@ pre {
 .sample-box-text {
   text-align: left;
   color: var(--sample-des);
+  width: 100%;
 }
 .sample-box p {
   width: fit-content;
@@ -510,6 +510,9 @@ pre {
   }
   .navbar-btn-li {
     width: fit-content;
+  }
+  .light-hover {
+    box-shadow: 0px 0px 5px rgba(0, 124, 200, 0.8);
   }
   pre { 
     max-width: 90vw;
